Ticket & Login system added

--- a/CustomerMP.UI/Views/Login/AccessDenied.cshtml
+++ b/CustomerMP.UI/Views/Login/AccessDenied.cshtml
@@ -10,28 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-        body {
-            background-color: #e0fbff;
-            color: black;
-        }
 
-        h1 {
-            color: red;
-        }
-
-        h6 {
-            color: red;
-            text-decoration: underline;
-        }
-    </style>
 </head>
 
-<body>
+<bodyd>
     <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-top w3-center"><code>Erişim Engellendi</code></h1>
+        <h1d class="w3-jumbo w3-animate-top w3-center"><code>Erişim Engellendi</code></h1d>
         <hr class="w3-border-white w3-animate-left" style="margin:auto;width:50%">
         <h3 class="w3-center w3-animate-right">Bu sayfaya erişim yetkiniz bulunmamaktadır</h3>
     </div>
-</body>
+</bodyd>
 </html>
