--- a/CustomerMP.UI/Views/Shared/_LayoutNavbar.cshtml
+++ b/CustomerMP.UI/Views/Shared/_LayoutNavbar.cshtml
@@ -30,11 +30,27 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="/Customer/Index/">Müşteri Listesi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/Customer/AddCustomer/">Müşteri Ekle</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/Ticket/Index/">Bilet Listesi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/Ticket/AddTicket/">Bilet Ekle</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Müşteri İşlemleri
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="customerDropdown">
+                            <li><a class="dropdown-item" href="/Customer/Index/">Müşteri Listesi</a></li>
+                            <li><a class="dropdown-item" href="/Customer/AddCustomer/">Müşteri Ekle</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="ticketDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Bilet İşlemleri
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="ticketDropdown">
+                            <li><a class="dropdown-item" href="/Ticket/Index/">Bilet Listesi</a></li>
+                            <li><a class="dropdown-item" href="/Ticket/AddTicket/">Bilet Ekle</a></li>
+                        </ul>
+                    </li>
                 </ul>
+
 
                 <div class="d-flex">
                     <form method="post" action="/Login/Logout">
